--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,30 +1,5 @@
-<div class="m-4">
-  <button type="button" class="btn btn-danger" (click)="toggleBtn()">Display details</button> <span class="p-4">Click Count: {{countClicks}}</span>
-  <div *ngIf="isToggle" class="my-2 p-4 text-bg-light border border-primary rounded">
-    <p>
-      The aim of this assignment is to provide hands-on learning of concepts of string interpolation, property binding,
-      event binding, two-way data binding and basic directives in Angular. Following are the details of the same :
-    </p>
-    <ol>
-      <li>Add a button which says 'Display details'</li>
-      <li>Add a paragraph with any content of your choice.
-      <li>Toggle the displaying of this paragraph with the button created in the first step.</li>
-      <li>Log the number of 'Display details' button clicks.</li>
-      <li>Create another button and an input. The button will say 'Add'.</li>
-      <li>Once a user inputs some text in the input box and clicks on the 'Add' button, data gets displayed below.</li>
-      <li>Every fifth item will have a blue background.</li>
-    </ol>
-  </div>
-</div>
+<app-toggle></app-toggle>
 <hr>
-<div class="m-4">
-  <div class="d-flex">
-    <input #inputValue type="text" placeholder="Enter text" required>
-    <button (click)="addItem(inputValue.value); inputValue.value=''" class="ms-4 px-4 btn btn-primary">Add</button>
-  </div>
-  <div class="my-4">
-    <p class="my-2 p-2 border border-dark rounded" *ngFor="let ele of list; let i = index"
-      [ngClass]="{'text-bg-primary': (i+1)%5===0}">{{ele}}</p>
-  </div>
-</div>
+<app-form></app-form>
+
 
